crates/kirin-chumsky-format/src/generate/snapshots/kirin_chumsky_format__generate__tests__enum_tuple_variants_pretty.snap
---
source: crates/kirin-chumsky-format/src/generate/tests.rs
expression: pretty
---
#[automatically_derived]
impl ::kirin::pretty::PrettyPrint for TupleLang {
    fn pretty_print<'a, __L: ::kirin::ir::Dialect + ::kirin::pretty::PrettyPrint>(
        &self,
        doc: &'a ::kirin::pretty::Document<'a, __L>,
    ) -> ::kirin::pretty::ArenaDoc<'a>
    where
        __L::Type: ::core::fmt::Display,
    {
        use kirin::pretty::DocAllocator;
        match self {
            TupleLang::Return(f0) => {
                doc.text("return ") + ::kirin::pretty::PrettyPrint::pretty_print(f0, doc)
            }
            TupleLang::Neg(f0, f1) => {
                ::kirin::pretty::PrettyPrint::pretty_print_name(f1, doc)
                    + doc.text(" = neg ")
                    + ::kirin::pretty::PrettyPrint::pretty_print(f0, doc)
                    + doc.text(" -> ")
                    + ::kirin::pretty::PrettyPrint::pretty_print_type(f1, doc)
            }
        }
    }
}
