crates/kirin-chumsky-format/src/generate/snapshots/kirin_chumsky_format__generate__tests__enum_wrapper_with_generics_pretty.snap
---
source: crates/kirin-chumsky-format/src/generate/tests.rs
expression: pretty
---
impl<T: TypeLattice> ::kirin::pretty::PrettyPrint for WrapperWithGenerics<T> {
    fn pretty_print<'a, __L: ::kirin::ir::Dialect + ::kirin::pretty::PrettyPrint>(
        &self,
        doc: &'a ::kirin::pretty::Document<'a, __L>,
    ) -> ::kirin::pretty::ArenaDoc<'a>
    where
        __L::Type: ::core::fmt::Display,
    {
        use kirin::pretty::DocAllocator;
        match self {
            WrapperWithGenerics::Inner(inner) => {
                ::kirin::pretty::PrettyPrint::pretty_print(inner, doc)
            }
        }
    }
}
