crates/kirin-chumsky-format/src/generate/snapshots/kirin_chumsky_format__generate__tests__format_special_tokens_ast.snap
---
source: crates/kirin-chumsky-format/src/generate/tests.rs
expression: ast
---
#[derive(Clone, Debug, PartialEq)]
pub struct LoadAST<'tokens, 'src, Language>
where
    Language: ::kirin::ir::Dialect,
{
    pub addr: ::kirin::parsers::SSAValue<
        'src,
        <SimpleType as ::kirin::parsers::HasParser<'tokens, 'src>>::Output,
    >,
    pub res: ::kirin::parsers::ResultValue<
        'src,
        <SimpleType as ::kirin::parsers::HasParser<'tokens, 'src>>::Output,
    >,
    #[doc(hidden)]
    _marker: ::core::marker::PhantomData<fn() -> (&'tokens (), &'src (), Language)>,
}
