crates/kirin-chumsky-format/src/generate/snapshots/kirin_chumsky_format__generate__tests__format_special_tokens_emit.snap
---
source: crates/kirin-chumsky-format/src/generate/tests.rs
expression: emit
---
impl<'tokens, 'src: 'tokens, TypeOutput, LanguageOutput, Language>
    ::kirin::parsers::EmitIR<Language> for LoadAST<'tokens, 'src, TypeOutput, LanguageOutput>
where
    Language: ::kirin::ir::Dialect + From<Load>,
    TypeOutput: Clone + PartialEq,
    LanguageOutput: Clone + PartialEq + 'tokens,
    LanguageOutput: ::kirin::parsers::EmitIR<Language, Output = ::kirin::ir::Statement>,
    SimpleType: ::kirin::parsers::HasParser<'tokens, 'src> + 'tokens,
    <SimpleType as ::kirin::parsers::HasParser<'tokens, 'src>>::Output:
        ::kirin::parsers::EmitIR<Language, Output = <Language as ::kirin::ir::Dialect>::Type>,
{
    type Output = ::kirin::ir::Statement;
    fn emit(&self, ctx: &mut ::kirin::parsers::EmitContext<'_, Language>) -> Self::Output {
        let Self {
            addr: f_addr,
            res: f_res,
            ..
        } = self;
        let f_addr_ir: ::kirin::ir::SSAValue = ::kirin::parsers::EmitIR::emit(f_addr, ctx);
        let f_res_ir: ::kirin::ir::ResultValue = ::kirin::parsers::EmitIR::emit(f_res, ctx);
        let dialect_variant: Load = Load {
            addr: f_addr_ir.into(),
            res: f_res_ir.into(),
        };
        ctx.stage.statement().definition(dialect_variant).new()
    }
}
impl<'tokens, 'src, TypeOutput, Language> ::kirin::parsers::EmitIR<Language>
    for LoadASTSelf<'tokens, 'src, TypeOutput>
where
    Language: ::kirin::ir::Dialect + From<Load>,
    TypeOutput: Clone + PartialEq,
    'src: 'tokens,
    SimpleType: ::kirin::parsers::HasParser<'tokens, 'src> + 'tokens,
    <SimpleType as ::kirin::parsers::HasParser<'tokens, 'src>>::Output:
        ::kirin::parsers::EmitIR<Language, Output = <Language as ::kirin::ir::Dialect>::Type>,
{
    type Output = ::kirin::ir::Statement;
    fn emit(&self, ctx: &mut ::kirin::parsers::EmitContext<'_, Language>) -> Self::Output {
        ::kirin::parsers::EmitIR::emit(&self.0, ctx)
    }
}
