crates/kirin-chumsky-format/src/generate/snapshots/kirin_chumsky_format__generate__tests__struct_cond_branch_ast.snap
---
source: crates/kirin-chumsky-format/src/generate/tests.rs
expression: ast
---
pub struct CondBranchAST<'tokens, 'src, Language>
where
    Language: ::kirin_ir::Dialect,
{
    pub cond: ::kirin_chumsky::SSAValue<
        'src,
        <SimpleType as ::kirin_chumsky::HasParser<'tokens, 'src>>::Output,
    >,
    pub then_target: ::kirin_chumsky::BlockLabel<'src>,
    pub else_target: ::kirin_chumsky::BlockLabel<'src>,
    #[doc(hidden)]
    _marker: ::core::marker::PhantomData<fn() -> (&'tokens (), &'src (), Language)>,
}
