crates/kirin-chumsky-format/src/generate/snapshots/kirin_chumsky_format__generate__tests__struct_cond_branch_pretty.snap
---
source: crates/kirin-chumsky-format/src/generate/tests.rs
expression: pretty
---
impl ::kirin::pretty::PrettyPrint<CondBranch> for CondBranch {
    fn pretty_print<'a>(
        &self,
        doc: &'a ::kirin::pretty::Document<'a, CondBranch>,
    ) -> ::kirin::pretty::ArenaDoc<'a> {
        use kirin::pretty::DocAllocator;
        let CondBranch {
            cond: f_cond,
            then_target: f_then_target,
            else_target: f_else_target,
        } = self;
        doc.text("br ")
            + ::kirin::pretty::PrettyPrint::pretty_print(f_cond, doc)
            + doc.text(", ")
            + ::kirin::pretty::PrettyPrint::pretty_print(f_then_target, doc)
            + doc.text(", ")
            + ::kirin::pretty::PrettyPrint::pretty_print(f_else_target, doc)
    }
}
