crates/kirin-chumsky-format/src/generate/snapshots/kirin_chumsky_format__generate__tests__struct_simple_add_ast.snap
---
source: crates/kirin-chumsky-format/src/generate/tests.rs
expression: ast
---
#[derive(Clone, Debug, PartialEq)]
#[doc(hidden)]
pub struct AddAST<'tokens, 'src: 'tokens, TypeOutput, LanguageOutput>
where
    TypeOutput: Clone + PartialEq + 'tokens,
    LanguageOutput: Clone + PartialEq + 'tokens,
{
    pub lhs: ::kirin::parsers::SSAValue<
        'src,
        <SimpleType as ::kirin::parsers::HasParser<'tokens, 'src>>::Output,
    >,
    pub rhs: ::kirin::parsers::SSAValue<
        'src,
        <SimpleType as ::kirin::parsers::HasParser<'tokens, 'src>>::Output,
    >,
    pub res: ::kirin::parsers::ResultValue<
        'src,
        <SimpleType as ::kirin::parsers::HasParser<'tokens, 'src>>::Output,
    >,
    #[doc(hidden)]
    _marker:
        ::core::marker::PhantomData<fn() -> (&'tokens (), &'src (), TypeOutput, LanguageOutput)>,
}
#[derive(Clone, Debug, PartialEq)]
#[doc(hidden)]
pub struct AddASTSelf<'tokens, 'src: 'tokens, TypeOutput>(
    pub AddAST<'tokens, 'src, TypeOutput, AddASTSelf<'tokens, 'src, TypeOutput>>,
    ::core::marker::PhantomData<fn() -> (&'tokens (), &'src (), TypeOutput)>,
)
where
    TypeOutput: Clone + PartialEq,
    'src: 'tokens;
impl<'tokens, 'src, TypeOutput> AddASTSelf<'tokens, 'src, TypeOutput>
where
    TypeOutput: Clone + PartialEq,
    'src: 'tokens,
{
    #[doc = r" Creates a new ASTSelf wrapper."]
    pub fn new(
        inner: AddAST<'tokens, 'src, TypeOutput, AddASTSelf<'tokens, 'src, TypeOutput>>,
    ) -> Self {
        Self(inner, ::core::marker::PhantomData)
    }
}
