crates/kirin-chumsky-format/src/generate/snapshots/kirin_chumsky_format__generate__tests__struct_simple_add_emit.snap
---
source: crates/kirin-chumsky-format/src/generate/tests.rs
expression: emit
---
impl<'tokens, 'src: 'tokens, TypeOutput, LanguageOutput, Language>
    ::kirin::parsers::EmitIR<Language> for AddAST<'tokens, 'src, TypeOutput, LanguageOutput>
where
    Language: ::kirin::ir::Dialect + From<Add>,
    TypeOutput: Clone + PartialEq,
    LanguageOutput: Clone + PartialEq + 'tokens,
    SimpleType: ::kirin::parsers::HasParser<'tokens, 'src> + 'tokens,
    <SimpleType as ::kirin::parsers::HasParser<'tokens, 'src>>::Output:
        ::kirin::parsers::EmitIR<Language, Output = <Language as ::kirin::ir::Dialect>::Type>,
{
    type Output = ::kirin::ir::Statement;
    fn emit(&self, ctx: &mut ::kirin::parsers::EmitContext<'_, Language>) -> Self::Output {
        let Self {
            lhs: f_lhs,
            rhs: f_rhs,
            res: f_res,
            ..
        } = self;
        let f_lhs_ir: ::kirin::ir::SSAValue = ::kirin::parsers::EmitIR::emit(f_lhs, ctx);
        let f_rhs_ir: ::kirin::ir::SSAValue = ::kirin::parsers::EmitIR::emit(f_rhs, ctx);
        let f_res_ir: ::kirin::ir::ResultValue = ::kirin::parsers::EmitIR::emit(f_res, ctx);
        let dialect_variant: Add = Add {
            lhs: f_lhs_ir.into(),
            rhs: f_rhs_ir.into(),
            res: f_res_ir.into(),
        };
        ctx.stage.statement().definition(dialect_variant).new()
    }
}
impl<'tokens, 'src, TypeOutput, Language> ::kirin::parsers::EmitIR<Language>
    for AddASTSelf<'tokens, 'src, TypeOutput>
where
    Language: ::kirin::ir::Dialect + From<Add>,
    TypeOutput: Clone + PartialEq,
    'src: 'tokens,
    SimpleType: ::kirin::parsers::HasParser<'tokens, 'src> + 'tokens,
    <SimpleType as ::kirin::parsers::HasParser<'tokens, 'src>>::Output:
        ::kirin::parsers::EmitIR<Language, Output = <Language as ::kirin::ir::Dialect>::Type>,
{
    type Output = ::kirin::ir::Statement;
    fn emit(&self, ctx: &mut ::kirin::parsers::EmitContext<'_, Language>) -> Self::Output {
        ::kirin::parsers::EmitIR::emit(&self.0, ctx)
    }
}
