crates/kirin-chumsky-format/src/generate/snapshots/kirin_chumsky_format__generate__tests__struct_simple_add_parser.snap
---
source: crates/kirin-chumsky-format/src/generate/tests.rs
expression: parser
---
impl<'tokens, 'src: 'tokens, Language> ::kirin::parsers::HasDialectParser<'tokens, 'src, Language>
    for Add
where
    Language: ::kirin::ir::Dialect + 'tokens,
    SimpleType: ::kirin::parsers::HasParser<'tokens, 'src> + 'tokens,
{
    type Output = AddAST<'tokens, 'src, Language>;
    type TypeAST = <SimpleType as ::kirin::parsers::HasParser<'tokens, 'src>>::Output;
    #[inline]
    fn recursive_parser<I>(
        language: ::kirin::parsers::RecursiveParser<
            'tokens,
            'src,
            I,
            <Language as ::kirin::parsers::HasDialectParser<'tokens, 'src, Language>>::Output,
        >,
    ) -> ::kirin::parsers::BoxedParser<'tokens, 'src, I, Self::Output>
    where
        I: ::kirin::parsers::TokenInput<'tokens, 'src>,
        Language: ::kirin::parsers::HasDialectParser<'tokens, 'src, Language>,
    {
        use kirin::parsers::chumsky::prelude::*;
        let parser: ::kirin::parsers::BoxedParser<
            'tokens,
            'src,
            I,
            AddAST<'tokens, 'src, Language>,
        > = {
            use kirin::parsers::Token;
            ::kirin::parsers::nameof_ssa()
                .then_ignore(
                    ::kirin::parsers::chumsky::prelude::just(Token::Equal).then_ignore(
                        ::kirin::parsers::chumsky::prelude::just(Token::Identifier("add")),
                    ),
                )
                .then(::kirin::parsers::ssa_value::<_, Language, SimpleType>())
                .then_ignore(::kirin::parsers::chumsky::prelude::just(Token::Comma))
                .then(::kirin::parsers::ssa_value::<_, Language, SimpleType>())
                .then_ignore(::kirin::parsers::chumsky::prelude::just(Token::Arrow))
                .then(::kirin::parsers::typeof_ssa::<_, Language, SimpleType>())
                .map(
                    |(((res_name, lhs), rhs), res_type)| -> AddAST<'tokens, 'src, Language> {
                        AddAST {
                            lhs: lhs,
                            rhs: rhs,
                            res: ::kirin::parsers::ResultValue {
                                name: ::kirin::parsers::Spanned {
                                    value: res_name.name,
                                    span: res_name.span,
                                },
                                ty: Some(res_type.ty.clone()),
                            },
                            _marker: ::core::marker::PhantomData,
                        }
                    },
                )
        }
        .boxed();
        unsafe { ::core::mem::transmute(parser) }
    }
}
impl<'tokens, 'src: 'tokens> ::kirin::parsers::HasParser<'tokens, 'src> for Add
where
    SimpleType: ::kirin::parsers::HasParser<'tokens, 'src> + 'tokens,
{
    type Output = AddAST<'tokens, 'src, Add>;
    fn parser<I>() -> ::kirin::parsers::BoxedParser<'tokens, 'src, I, Self::Output>
    where
        I: ::kirin::parsers::TokenInput<'tokens, 'src>,
    {
        use kirin::parsers::chumsky::prelude::*;
        ::kirin::parsers::chumsky::recursive::recursive(|language| {
            <Add as ::kirin::parsers::HasDialectParser<'tokens, 'src, Add>>::recursive_parser(
                language,
            )
        })
        .boxed()
    }
}
