crates/kirin-chumsky-format/src/generate/snapshots/kirin_chumsky_format__generate__tests__struct_simple_add_pretty.snap
---
source: crates/kirin-chumsky-format/src/generate/tests.rs
expression: pretty
---
#[automatically_derived]
impl ::kirin::pretty::PrettyPrint for Add {
    fn pretty_print<'a, __L: ::kirin::ir::Dialect + ::kirin::pretty::PrettyPrint>(
        &self,
        doc: &'a ::kirin::pretty::Document<'a, __L>,
    ) -> ::kirin::pretty::ArenaDoc<'a>
    where
        __L::Type: ::core::fmt::Display,
    {
        use kirin::pretty::DocAllocator;
        let Add {
            lhs: f_lhs,
            rhs: f_rhs,
            res: f_res,
        } = self;
        ::kirin::pretty::PrettyPrint::pretty_print_name(f_res, doc)
            + doc.text(" = add ")
            + ::kirin::pretty::PrettyPrint::pretty_print(f_lhs, doc)
            + doc.text(", ")
            + ::kirin::pretty::PrettyPrint::pretty_print(f_rhs, doc)
            + doc.text(" -> ")
            + ::kirin::pretty::PrettyPrint::pretty_print_type(f_res, doc)
    }
}
